# too-many-open-files

./: Cargo.toml  README.md
src/: cli.rs  client.rs  init.rs  main.rs  server.rs  tracing.rs
src/cli/: after_help  util.rs
src/client/: async.rs  sync.rs
src/server/: async.rs  sync.rs
