[package]
name = "too-many-open-files"
version = "0.1.0"
authors = ["Yuntao Wang <ytcoode@gmail.com>"]
edition = "2021"
description = "A program used to trigger the 'Too many open files' error"
license = "MIT"

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
color-print = "0.3.4"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
